--- a/package.json
+++ b/package.json
@@ -23,9 +23,10 @@
     "commander": "5.1.0",
     "is-url": "1.2.4",
     "mz": "2.7.0",
-    "shelljs": "0.8.3"
+    "shelljs": "0.8.4"
   },
   "devDependencies": {
-    "@types/node": "14.0.14"
+    "@types/node": "14.0.14",
+    "@types/shelljs": "^0.8.8"
   }
 }
