--- a/package.json
+++ b/package.json
@@ -27,6 +27,13 @@
   },
   "devDependencies": {
     "@types/node": "14.0.14",
-    "@types/shelljs": "^0.8.8"
+    "@types/shelljs": "^0.8.8",
+    "@typescript-eslint/eslint-plugin": "^5.6.0",
+    "@typescript-eslint/parser": "^5.6.0",
+    "eslint": "^8.4.1",
+    "eslint-config-prettier": "^8.3.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "prettier": "^2.5.1",
+    "typescript": "^4.5.3"
   }
 }
